# swagger.json
@@ -1,7 +1,7 @@
 {
   "swagger": "2.0",
   "info": {
-    "version": "V2.0",
+    "version": "V3.0",
     "title": "Final-Project-API"
   },
   "schemes": ["http"],
@@ -62,6 +62,40 @@
           },
           "403": {
             "description": "Permission denied"
+          }
+        }
+      }
+    },
+    "/admin/users/{id}": {
+      "put": {
+        "description": "Block user by id (permission only for superuser)",
+        "tags": [
+          "Admin"
+        ],
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "type": "string",
+            "required": true,
+            "description": "A unique user id"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Successful response (field 'is_active' will change on 1 or 0)",
+            "schema": {
+              "$ref": "#/definitions/User"
+            }
+          },
+          "400": {
+            "description": "Bad request",
+            "schema": {
+              "$ref": "#/definitions/CustomError"
+            }
+          },
+          "401": {
+            "description": "Unauthorized"
           }
         }
       }
@@ -495,6 +529,32 @@
         }
       }
     },
+    "/paid/statistic": {
+      "get": {
+        "description": "Get status statistic",
+        "tags": [
+          "Paid"
+        ],
+        "parameters": [],
+        "responses": {
+          "200": {
+            "description": "Successful response",
+            "schema": {
+              "$ref": "#/definitions/Statistic"
+            }
+          },
+          "400": {
+            "description": "Bad request",
+            "schema": {
+              "$ref": "#/definitions/CustomError"
+            }
+          },
+          "401": {
+            "description": "Unauthorized"
+          }
+        }
+      }
+    },
     "/paid/{id}": {
       "get": {
         "description": "Get one paid by id",
@@ -715,26 +775,23 @@
           }
         },
         "manager": {
-          "type": "array",
-          "items": {
-            "type": "object",
-            "properties": {
-              "_id": {
-                "type": "string",
-                "example": "63ca5a163b087be59aa57ffd"
-              },
-              "name": {
-                "type": "string",
-                "example": "Admin"
-              },
-              "surname": {
-                "type": "string",
-                "example": "Admin"
-              },
-              "_user_id": {
-                "type": "string",
-                "example": "63ca5a163b087be59aa57ffb"
-              }
+          "type": "object",
+          "properties": {
+            "_id": {
+              "type": "string",
+              "example": "63ca5a163b087be59aa57ffd"
+            },
+            "name": {
+              "type": "string",
+              "example": "Admin"
+            },
+            "surname": {
+              "type": "string",
+              "example": "Admin"
+            },
+            "_user_id": {
+              "type": "string",
+              "example": "63ca5a163b087be59aa57ffb"
             }
           }
         }
@@ -782,10 +839,21 @@
               "surname": {
                 "type": "string",
                 "example": "Admin"
-              },
-              "_user_id": {
-                "type": "string",
-                "example": "63ca5a163b087be59aa57ffb"
+              }
+            }
+          }
+        },
+        "orders": {
+          "type": "object",
+          "properties": {
+            "total_count": {
+              "type": "number",
+              "example": 3
+            },
+            "status_count": {
+              "type": "array",
+              "items": {
+                "$ref": "#/definitions/Status"
               }
             }
           }
@@ -925,6 +993,32 @@
         "password": {
           "type": "string",
           "example": "somePassword444"
+        }
+      }
+    },
+    "Statistic": {
+      "properties": {
+        "total_count": {
+          "type": "number",
+          "example": 756
+        },
+        "status_count": {
+          "type": "array",
+          "items": {
+            "$ref": "#/definitions/Status"
+          }
+        }
+      }
+    },
+    "Status": {
+      "properties": {
+        "status": {
+          "type": "string",
+          "example": "Agree"
+        },
+        "count": {
+          "type": "number",
+          "example": 1
         }
       }
     }
